// Book해도. — 실제 PostgreSQL 테이블과 일치하는 ERD
// 파일 전체를 https://dbdiagram.io 에 붙여 넣으세요.
Project bookhaedo {
 database_type: 'PostgreSQL'
 Note: 'Vue 3 + Express REST + PostgreSQL/PostGIS. geo_data는 실제 수집 장소, planner는 회원·여행·일정. Google 경로와 Open-Meteo 날씨 응답은 영구 저장하지 않음.'
}

Table planner.admin_audit {
 id uuid [pk]
 actor_id uuid [ref: > planner.app_user.id]
 target_id uuid [ref: > planner.app_user.id]
 before_state jsonb [not null]
 after_state jsonb [not null]
 created_at timestamptz [not null, default: `now()`]
}
Table planner.app_user {
 role text [not null, default: 'MEMBER']
 status text [not null, default: 'ACTIVE']
 id uuid [pk]
 email text [not null, unique]
 display_name text [not null]
 password_hash text [not null, note: 'scrypt salt:hash. API 응답 제외']
 created_at timestamptz [not null, default: `now()`]
}
Table planner.session {
 token_hash text [pk, note: '원본 토큰 대신 SHA-256 저장; 브라우저에는 HttpOnly 쿠키']
 user_id uuid [not null]
 expires_at timestamptz [not null]
 created_at timestamptz [not null, default: `now()`]
 indexes { user_id }
}
Table planner.trip {
 id uuid [pk]
 user_id uuid [not null]
 title text [not null]
 cost_settings jsonb [not null, default: `'{}'::jsonb`]
 transport_mode text [not null, default: 'DRIVE', note: 'DRIVE / TAXI / TRANSIT / WALK / BICYCLE']
 created_at timestamptz [not null, default: `now()`]
 updated_at timestamptz [not null, default: `now()`]
 indexes { user_id }
}
Table planner.trip_day {
 id uuid [pk]
 trip_id uuid [not null]
 visit_date date [not null]
 revision integer [not null, default: 0, note: '일정·메모 변경 시 증가. expectedRevision으로 오래된 저장 차단']
 indexes { (trip_id, visit_date) [unique] }
}
Table planner.itinerary_item {
 estimated_cost integer [note: 'JPY 예상 총액. NULL=미입력, 0..100000000']
 id uuid [pk]
 day_id uuid [not null]
 place_id text [not null]
 position integer [not null, note: '0부터 시작하는 방문 순서']
 note text [not null, default: '']
 indexes {
  (day_id, position) [unique]
  (day_id, place_id) [unique]
 }
}
Table geo_data.place {
 id text [pk]
 region_id text [not null, note: '12개 관광권 코드. 현재 최근접 기준점으로 근사 배정; 행정구역 확정값 아님']
 category text [not null, note: 'ATTRACTION / RESTAURANT / LODGING']
 name_ja text [not null]
 name_en text
 name_ko text
 normalized_name text [not null]
 municipality_name text
 address text
 latitude double [not null]
 longitude double [not null]
 location geography [not null, note: 'PostGIS geography(Point,4326), GiST index']
 phone text
 website text
 opening_hours text [note: 'OSM 원문; 값이 없으면 운영시간 미확인']
 osm_tags jsonb [not null, default: `'{}'::jsonb`]
 source_count integer [not null, default: 1]
 region_distance_km double [not null]
 created_at timestamptz [not null, default: `now()`]
 updated_at timestamptz [not null, default: `now()`]
 indexes {
  (region_id, category)
  normalized_name
 }
}
Table geo_data.data_source {
 code text [pk]
 source_name text [not null]
 source_url text [not null]
 license text [not null]
 attribution text [not null]
 snapshot_at timestamptz
}
Table geo_data.place_source {
 source_code text [not null]
 external_id text [not null]
 place_id text [not null]
 source_url text
 license text [not null]
 raw_data jsonb [not null, default: `'{}'::jsonb`]
 fetched_at timestamptz [not null, default: `now()`]
 indexes {
  (source_code, external_id) [pk]
  place_id
 }
}
Table geo_data.municipal_facility {
 external_id text [pk]
 name_ja text [not null]
 normalized_name text [not null]
 municipality_name text [not null]
 latitude double [not null]
 longitude double [not null]
 location geography [not null, note: 'PostGIS geography(Point,4326), GiST index']
 source_address text
 search_address text
 building text
 data_type text [not null]
 source_name text [not null]
 original_material text
 imported_at timestamptz [not null, default: `now()`]
 indexes { normalized_name }
}
Table geo_data.merge_audit {
 municipal_external_id text [pk, note: 'municipal_facility.external_id와 논리적 연결; 원본 스키마에는 FK 없음']
 place_id text [not null]
 distance_m double [not null]
 match_rule text [not null]
 matched_at timestamptz [not null, default: `now()`]
}
Table geo_data.import_run {
 id text [pk]
 started_at timestamptz [not null]
 completed_at timestamptz
 osm_replication_timestamp timestamptz
 municipal_row_count integer [not null, default: 0]
 osm_poi_count integer [not null, default: 0]
 canonical_place_count integer [not null, default: 0]
 municipal_match_count integer [not null, default: 0]
 quality_report jsonb [not null, default: `'{}'::jsonb`]
}
Ref: planner.session.user_id > planner.app_user.id [delete: cascade]
Ref: planner.trip.user_id > planner.app_user.id [delete: cascade]
Ref: planner.trip_day.trip_id > planner.trip.id [delete: cascade]
Ref: planner.itinerary_item.day_id > planner.trip_day.id [delete: cascade]
Ref: planner.itinerary_item.place_id > geo_data.place.id
Ref: geo_data.place_source.place_id > geo_data.place.id [delete: cascade]
Ref: geo_data.place_source.source_code > geo_data.data_source.code
Ref: geo_data.merge_audit.place_id > geo_data.place.id [delete: cascade]
Table planner.google_place_link {
 place_id text [pk, ref: > geo_data.place.id]
 google_place_id text [not null]
 matched_at timestamptz [not null, default: `now()`]
}
Table planner.review_import {
 id uuid [pk]
 place_id text [not null, ref: > geo_data.place.id]
 provider_run_id text [unique]
 google_place_id text [not null]
 coverage_start date [not null]
 coverage_end date [not null]
 complete boolean [not null, default: false]
 received_count integer [not null]
 accepted_count integer [not null]
 rejected_count integer [not null]
 duplicate_count integer [not null]
 reason text [not null]
 scraped_at timestamptz [not null, default: `now()`]
}
Table planner.place_review_stats {
 place_id text [not null, ref: > geo_data.place.id]
 import_id uuid [not null]
 period_type text [not null, note: 'WEEK / MONTH']
 period_start date [not null]
 review_count integer [not null]
 average_rating numeric
 previous_review_count integer
 growth_rate numeric
 complete boolean [not null]
 calculated_at timestamptz [not null, default: `now()`]
 indexes { (import_id,period_type,period_start) [pk] }
}
Table planner.place_review_trend {
 place_id text [pk, ref: > geo_data.place.id]
 import_id uuid [not null, ref: > planner.review_import.id]
 trend_type text [not null]
 recent_review_count integer [not null]
 previous_review_count integer [not null]
 growth_rate numeric
 seasonal_patterns jsonb [not null, default: `'[]'::jsonb`]
 quality jsonb [not null]
 calculated_at timestamptz [not null, default: `now()`]
}
Ref: planner.place_review_stats.import_id > planner.review_import.id [delete: cascade]

Table planner.trip_member {
 trip_id uuid [not null, ref: > planner.trip.id]
 user_id uuid [not null, ref: > planner.app_user.id]
 joined_at timestamptz [not null, default: `now()`]
 indexes { (trip_id,user_id) [pk] }
}
Table planner.trip_invitation {
 id uuid [pk]
 trip_id uuid [not null, ref: > planner.trip.id]
 sender_id uuid [ref: > planner.app_user.id]
 email text
 token_hash text [not null, unique]
 status text [not null, default: 'PENDING', note: 'PENDING / ACCEPTED / DECLINED / REVOKED']
 accepted_by uuid [ref: > planner.app_user.id]
 expires_at timestamptz [not null, note: '발급 7일 후 만료, 1회 수락']
 created_at timestamptz [not null, default: `now()`]
}
Table planner.notification {
 id uuid [pk]
 user_id uuid [not null, ref: > planner.app_user.id]
 trip_id uuid [ref: > planner.trip.id]
 message text [not null]
 read_at timestamptz
 created_at timestamptz [not null, default: `now()`]
}
Table planner.checklist_item {
 id uuid [pk]
 trip_id uuid [not null, ref: > planner.trip.id]
 label text [not null]
 done boolean [not null, default: false]
 created_at timestamptz [not null, default: `now()`]
}
Table planner.trip_message {
 id uuid [pk]
 trip_id uuid [not null, ref: > planner.trip.id]
 user_id uuid [ref: > planner.app_user.id]
 body text [not null, note: '1..2000 characters']
 created_at timestamptz [not null, default: `now()`]
}
Table planner.expense {
 id uuid [pk]
 trip_id uuid [not null, ref: > planner.trip.id]
 label text [not null]
 amount integer [not null, note: 'JPY 정수 1..100000000']
 payer_id uuid [not null, note: '입력 시 참여자 검증. 탈퇴 후 정산 보존용 ID 유지']
 created_at timestamptz [not null, default: `now()`]
}
Table planner.expense_share {
 expense_id uuid [not null, ref: > planner.expense.id]
 participant_id uuid [not null, note: '입력 시 참여자 검증. 탈퇴 후 정산 보존용 ID 유지']
 amount integer [not null, note: '엔 단위 균등분담. 나머지는 ID순으로 1엔 배분']
 indexes { (expense_id,participant_id) [pk] }
}
